[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Textures/metal-background.jpg" type="Texture" id=2]
[ext_resource path="res://Script/SceneManagers/MainMenuSceneManager.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_top = -0.000416876
anchor_right = 1.0
anchor_bottom = 0.999583
margin_top = 0.450226
margin_bottom = 0.450195
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0925926
margin_left = -451.5
margin_top = 200.0
margin_right = 451.5
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "Defuse the bomb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.5
margin_top = -40.0
margin_right = 328.5
margin_bottom = 230.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoomButton" type="Button" parent="VBoxContainer"]
margin_right = 657.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 2 )
text = "Create Room"

[node name="JoinRoomButton" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 657.0
margin_bottom = 175.0
grow_vertical = 0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 2 )
text = "Join Room"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 657.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="ScoreBoardButton" type="Button" parent="VBoxContainer"]
margin_top = 285.0
margin_right = 657.0
margin_bottom = 365.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 2 )
text = "Scoreboard"
[connection signal="pressed" from="VBoxContainer/CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinRoomButton" to="." method="_on_JoinRoomButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScoreBoardButton" to="." method="_on_ScoreBoardButton_pressed"]
